src/main/java/org/example/kdtbe8_toyproject2/global/error/errorcode/ErrorCode.java
package org.example.kdtbe8_toyproject2.global.error.errorcode;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
    String name();
    HttpStatus defaultHttpStatus();
    String defaultMessage();
    RuntimeException defaultException();
    RuntimeException defaultException(Throwable cause);
}
